--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -3,7 +3,7 @@
 /* BASIC */
 
 .div-panel {
-  background: url('../index/images/img-1.jpg');
+  background: url('../index/images/img-1.png');
   width: 100%;
   height: 100%;
   position: absolute;
