--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -15,3 +15,60 @@
   text-align: center;
   padding: 100px;
 }
+
+.nav-item-home {
+  display: inline-block;
+  padding: 8px 15px;
+  background-color: #006400;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.nav-item-home:hover {
+  background-color: #006400;
+
+}
+
+.nav-item-betnow {
+  display: inline-block;
+  padding: 8px 25px;
+  background-color: #ff0000;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.nav-item-betnow:hover {
+  background-color: #ff0000;
+
+}
+
+.nav-item-bestrates {
+  display: inline-block;
+  padding: 8px 15px;
+  background-color: #ff0000;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.nav-item-bestrates:hover {
+  background-color: #ff0000;
+
+}
