--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -14,6 +14,8 @@
   font-size: 16px;
   text-align: center;
   padding: 100px;
+  background-color: #f2f2f2;
+
 }
 
 .button-wrapper {
@@ -23,7 +25,7 @@
 .nav-item-home {
   display: inline-block;
   padding: 15px 15px;
-  background-color: #ff0000;
+  background-color: #4CAF50;
   color: #fff;
   font-size: 16px;
   text-align: center;
@@ -54,9 +56,9 @@
   margin-right: 20px;
 }
 
-.nav-item-betnow:hover {
-  background-color: #ff0000;
-
+.nav-item-betnow:active {
+  transform: translateY(2px);
+  box-shadow: none;
 }
 
 .nav-item-bestrates {
@@ -73,7 +75,7 @@
   margin-right: 20px;
 }
 
-.nav-item-bestrates:hover {
-  background-color: #ff0000;
-
+.nav-item-bestrates:active {
+  transform: translateY(2px);
+  box-shadow: none;
 }
