--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -213,7 +213,7 @@
 
 /* Style for the leaderboard part */
 .leaderboard-entries {
-  background-image: url('images/img-3.jpg');
+  background-image: url('images/it-s-a-blank-te_60950613.png');
   background-size: cover;
   background-position: center center;
   padding: 40px;
@@ -281,4 +281,21 @@
 
 .buttom-text {
   padding-top: 20px;
+}
+
+
+/* logo in css */
+
+
+.logo {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
