--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -288,14 +288,13 @@
 
 
 .logo {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
+  background: linear-gradient(to right, #9B1B30, #E20030);
+  padding: 15px;
+  border-radius: 5px;
+  color: #FFFFFF;
   font-size: 24px;
   font-weight: bold;
-  text-transform: uppercase;
+  text-align: center;
+  justify-content: center;
+  font-family: Helvetica;
 }
