translate page not found

--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -16,7 +16,7 @@ body {
 
 a {
   color: #dd9292;
-  display:inline-block;
+  display: inline-block;
   text-decoration: none;
   font-weight: 400;
 }
@@ -26,8 +26,8 @@ a {
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
-  display:inline-block;
-  margin: 20px 8px 10px 8px; 
+  display: inline-block;
+  margin: 20px 8px 10px 8px;
   color: #cccccc;
   cursor: pointer;
 }
@@ -39,7 +39,7 @@ a {
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column; 
+  P flex-direction: column;
   justify-content: center;
   width: 100%;
   min-height: 100%;
@@ -55,8 +55,8 @@ a {
   max-width: 450px;
   position: relative;
   padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
@@ -70,11 +70,11 @@ a {
 }
 
 #formHeader {
-    background-color: #f6f6f6;
-    text-align: center;
-    -webkit-border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 0px 0px;
-  }
+  background-color: #f6f6f6;
+  text-align: center;
+  -webkit-border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
+}
 
 
 
@@ -93,7 +93,9 @@ a {
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], .btn-login, input[type=reset]  {
+input[type=button],
+.btn-login,
+input[type=reset] {
   background-color: #56baed;
   border: none;
   color: white;
@@ -103,8 +105,8 @@ input[type=button], .btn-login, input[type=reset]  {
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -115,11 +117,15 @@ input[type=button], .btn-login, input[type=reset]  {
   transition: all 0.3s ease-in-out;
 }
 
-input[type=button]:hover, .btn-login:hover, input[type=reset]:hover  {
+input[type=button]:hover,
+.btn-login:hover,
+input[type=reset]:hover {
   background-color: #39ace7;
 }
 
-input[type=button]:active, .btn-login:active, input[type=reset]:active  {
+input[type=button]:active,
+.btn-login:active,
+input[type=reset]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
@@ -127,7 +133,10 @@ input[type=button]:active, .btn-login:active, input[type=reset]:active  {
   transform: scale(0.95);
 }
 
-input[type=text], input[type=password], input[type=number], select  {
+input[type=text],
+input[type=password],
+input[type=number],
+select {
   background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
@@ -148,12 +157,18 @@ input[type=text], input[type=password], input[type=number], select  {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type=text]:focus, input[type=password]:focus, input[type=number]:focus, select:focus {
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=number]:focus,
+select:focus {
   background-color: #fff;
   border-bottom: 2px solid #5fbae9;
 }
 
-input[type=text]: :placeholder, input[type=password]::placeholder, input[type=number]::placeholder, select::placeholder {
+input[type=text]: :placeholder,
+input[type=password]::placeholder,
+input[type=number]::placeholder,
+select::placeholder {
   color: #cccccc;
 }
 
@@ -177,6 +192,7 @@ input[type=text]: :placeholder, input[type=password]::placeholder, input[type=nu
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -190,6 +206,7 @@ input[type=text]: :placeholder, input[type=password]::placeholder, input[type=nu
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -198,23 +215,49 @@ input[type=text]: :placeholder, input[type=password]::placeholder, input[type=nu
 }
 
 /* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .fadeIn {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .fadeIn.first {
@@ -257,7 +300,7 @@ input[type=text]: :placeholder, input[type=password]::placeholder, input[type=nu
   color: #0d0d0d;
 }
 
-.underlineHover:hover:after{
+.underlineHover:hover:after {
   width: 100%;
 }
 
@@ -266,12 +309,13 @@ input[type=text]: :placeholder, input[type=password]::placeholder, input[type=nu
 /* OTHERS */
 
 *:focus {
-    outline: none;
-} 
+  outline: none;
+}
 
 .form-padding {
-    margin-top: 5px;
+  margin-top: 5px;
 }
+
 * {
   box-sizing: border-box;
 }
