--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -1,15 +1,3 @@
-/* set styles for all titles (not working without !important) */
-
-
-h2 {
-  font-family: Arial !important;
-  font-size: 20px !important;
-  font-weight: bold !important;
-  color: #000000 !important;
-}
-
-
-
 /* Style for the header */
 /* button for bet now */
 
@@ -80,6 +68,13 @@ h2 {
 
 /* body */
 
+
+
+
+.body {
+  background-color: #080808;
+}
+
 /* Grid for body */
 .grid-container {
   display: grid;
@@ -88,25 +83,21 @@ h2 {
   gap: 1px;
 }
 
-.grid-item {
-  background-color: #f5f5f5;
-  padding: 1px;
-}
-
-
-
-
-
 
 /* upcoming event section */
+
+#upcoming_event_title {
+  color: #D50000 !important;
+  font-size: 30px !important;
+}
+
 
 .upcoming-events {
   margin-top: 100px;
   padding: 20px 15px;
-  background-color: #f0fff0;
-  border: 3px solid #2e8b57;
+  background-color: #FFFFFF;
+  border: 3px solid #D50000;
   border-radius: 8px;
-
 }
 
 .event-item {
@@ -124,17 +115,17 @@ h2 {
 .event-title {
   font-size: 24px;
   font-weight: bold;
-  color: #2e8b57;
+  color: #D50000;
 }
 
 .event-time {
   font-size: 16px;
-  color: #666;
+  color: #D50000;
 }
 
 .event-bet-button {
-  background-color: #2e8b57;
-  color: #fff;
+  background-color: #D50000;
+  color: #FFFFFF;
   border: none;
   border-radius: 3px;
   padding: 10px 20px;
@@ -143,29 +134,23 @@ h2 {
 }
 
 .event-bet-button:hover {
-  background-color: #1c7430;
+  background-color: #ff0000;
 }
-
 
 
 /* betting slip section */
 
 /* Style for the betting slip section */
 .betting-slip {
-  background-color: #f6e3e3;
-  border: 1px solid #d9b7b7;
+  background-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
   padding: 20px;
   margin-top: 20px;
 }
 
-
-
-
-
 /* Style for the leaderboard part */
 .leaderboard-entries {
-  background-image: url('images/background_topbet.png');
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #080808;
   background-position: center center;
   padding: 200px 20px;
   border-radius: 20px;
@@ -186,7 +171,7 @@ h2 {
 .leaderboard-entries td {
   text-align: center;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #FFFFFF;
 }
 
 .leaderboard-entries th {
@@ -194,19 +179,23 @@ h2 {
 }
 
 
-
-
-
-
-
 /* footer */
+
+.footer {
+  background-color: #080808;
+  position: relative;
+}
+
 .buttom-text {
-  color: rgb(4, 0, 0);
+  color: #FFFFFF;
   font-size: 16px;
   text-align: center;
-  padding: 100px;
-  background-color: #f2f2f2;
-
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 .button-wrapper {
