--- a/src/pages/registration/styles.css
+++ b/src/pages/registration/styles.css
@@ -8,17 +8,27 @@
 }
 
 @-webkit-keyframes spin2 {
-  from { -webkit-transform: rotate(0deg);}
-  to { -webkit-transform: rotate(360deg);}
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  from { transform: scale(1) rotate(0deg);}
-  to { transform: scale(1) rotate(360deg);}
+  from {
+    transform: scale(1) rotate(0deg);
+  }
+
+  to {
+    transform: scale(1) rotate(360deg);
+  }
 }
 
 .div-panel {
-  background: url('../index/images/img-1.png');
+  background-color: #080808;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -31,7 +41,7 @@ body {
 
 a {
   color: #92badd;
-  display:inline-block;
+  display: inline-block;
   text-decoration: none;
   font-weight: 400;
 }
@@ -41,8 +51,8 @@ h2 {
   font-size: 16px;
   font-weight: 600;
   text-transform: uppercase;
-  display:inline-block;
-  margin: 20px 8px 10px 8px; 
+  display: inline-block;
+  margin: 20px 8px 10px 8px;
   color: #cccccc;
   cursor: pointer;
 }
@@ -54,7 +64,7 @@ h2 {
 .wrapper {
   display: flex;
   align-items: center;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: center;
   width: 100%;
   min-height: 100%;
@@ -70,8 +80,8 @@ h2 {
   max-width: 450px;
   position: relative;
   padding: 0px;
-  -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
-  box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   text-align: center;
 }
 
@@ -85,12 +95,12 @@ h2 {
 }
 
 #formHeader {
-    background-color: #f6f6f6;
-    border-top: 1px solid #dce8f1;
-    text-align: center;
-    -webkit-border-radius: 10px 10px 0px 0px;
-    border-radius: 10px 10px 0px 0px;
-  }
+  background-color: #f6f6f6;
+  border-top: 1px solid #dce8f1;
+  text-align: center;
+  -webkit-border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
+}
 
 
 
@@ -102,15 +112,17 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #D50000;
 }
 
 
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], .btn-register, input[type=reset]  {
-  background-color: #56baed;
+input[type=button],
+.btn-register,
+input[type=reset] {
+  background-color: #D50000;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -119,8 +131,8 @@ input[type=button], .btn-register, input[type=reset]  {
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
-  box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(95, 186, 233, 0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
   margin: 5px 20px 40px 20px;
@@ -131,11 +143,15 @@ input[type=button], .btn-register, input[type=reset]  {
   transition: all 0.3s ease-in-out;
 }
 
-input[type=button]:hover, .btn-register:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
+input[type=button]:hover,
+.btn-register:hover,
+input[type=reset]:hover {
+  background-color: #D50000;
 }
 
-input[type=button]:active, .btn-register:active, input[type=reset]:active  {
+input[type=button]:active,
+.btn-register:active,
+input[type=reset]:active {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
@@ -143,7 +159,9 @@ input[type=button]:active, .btn-register:active, input[type=reset]:active  {
   transform: scale(0.95);
 }
 
-input[type=text], input[type=password], input[type=email] {
+input[type=text],
+input[type=password],
+input[type=email] {
   background-color: #f6f6f6;
   border: none;
   color: #0d0d0d;
@@ -164,12 +182,16 @@ input[type=text], input[type=password], input[type=email] {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
+input[type=text]:focus,
+input[type=password]:focus,
+input[type=email]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #D50000;
 }
 
-input[type=text]::placeholder, input[type=password]::placeholder, input[type=email]::placeholder {
+input[type=text]::placeholder,
+input[type=password]::placeholder,
+input[type=email]::placeholder {
   color: #cccccc;
 }
 
@@ -193,6 +215,7 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -206,6 +229,7 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -214,23 +238,49 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
 }
 
 /* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .fadeIn {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .fadeIn.first {
@@ -282,7 +332,7 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #D50000;
   content: "";
   transition: width 0.2s;
 }
@@ -291,7 +341,7 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
   color: #0d0d0d;
 }
 
-.underlineHover:hover:after{
+.underlineHover:hover:after {
   width: 100%;
 }
 
@@ -300,12 +350,13 @@ input[type=text]::placeholder, input[type=password]::placeholder, input[type=ema
 /* OTHERS */
 
 *:focus {
-    outline: none;
-} 
+  outline: none;
+}
 
 .form-padding {
-    margin-top: 5px;
+  margin-top: 5px;
 }
+
 * {
   box-sizing: border-box;
 }
