--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -34,59 +34,13 @@ h2 {
   grid-row: 4;
 }
 
-/* logo in css */
-/* .logo {
-    background: linear-gradient(to right, #9B1B30, #E20030);
-    padding: 8px 25px;
-    border-radius: 5px;
-    color: #FFFFFF;
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    justify-content: center;
-    font-family: Helvetica;
-  }
-  
-  
-  .nav-item-betnow {
-    display: inline-block;
-    padding: 15px 25px;
-    background-image: linear-gradient(to right, #9B1B30, #E20030);
-    color: #fff;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    margin-right: 20px;
-    font-weight: bold;
-  }
-  
-  .nav-item-betnow:active {
-    transform: translateY(2px);
-    box-shadow: none;
-  }
-  
-  .nav-item-bestrates {
-    display: inline-block;
-    padding: 15px 25px;
-    background-image: linear-gradient(to right, #9B1B30, #E20030);
-    color: #fff;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    margin-right: 20px;
-    font-weight: bold;
-  
-  }
-  
-  .nav-item-bestrates:active {
-    transform: translateY(2px);
-    box-shadow: none;
-  }
-  
-  */
+.account-info {
+  background-color: #FFFFFF;
+  border: 1px solid #D50000;
+  border-radius: 5px;
+  box-sizing: border-box;
+  height: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  width: 100%;
+}
