--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -1,5 +1,13 @@
 /* General rules */
 
+
+.div-panel {
+  background-color: #080808;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
 h2 {
   font-family: Arial !important;
   font-size: 20px !important;
