--- a/src/pages/login/styles.css
+++ b/src/pages/login/styles.css
@@ -1,24 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
 
-/* BASIC */
-
-.div-panel {
-  background: url('../index/images/img-1.png');
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
-}
-
-a {
-  color: #dd9292;
-  display: inline-block;
-  text-decoration: none;
-  font-weight: 400;
+body, html {
+  background-color: #D50000;
 }
 
 .h2-login {
@@ -32,6 +14,10 @@ a {
   cursor: pointer;
 }
 
+/* STRUCTURE pour le login*/
+.h2-login-active {
+  color: red;
+}
 
 
 /* STRUCTURE */
@@ -39,7 +25,7 @@ a {
 .wrapper {
   display: flex;
   align-items: center;
-  P flex-direction: column;
+  flex-direction: column;
   justify-content: center;
   width: 100%;
   min-height: 100%;
@@ -165,7 +151,7 @@ select:focus {
   border-bottom: 2px solid #5fbae9;
 }
 
-input[type=text]: :placeholder,
+input[type=text]::placeholder,
 input[type=password]::placeholder,
 input[type=number]::placeholder,
 select::placeholder {
