--- a/src/pages/registration/styles.css
+++ b/src/pages/registration/styles.css
@@ -1,56 +1,26 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-
-/* BASIC */
-
-.loading-refresh-animate {
-  -animation: spin .7s infinite linear;
-  -webkit-animation: spin2 .7s infinite linear;
+body, html {
+  background-color: #D50000;
 }
-
-@-webkit-keyframes spin2 {
-  from { -webkit-transform: rotate(0deg);}
-  to { -webkit-transform: rotate(360deg);}
-}
-
-@keyframes spin {
-  from { transform: scale(1) rotate(0deg);}
-  to { transform: scale(1) rotate(360deg);}
-}
-
-.div-panel {
-  background: url('../index/images/img-1.png');
+/* STRUCTURE pour le login*/
+/* */
+/* Ajout de l'overlay dark */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);  /* This adds a dark background with 70% opacity */
+  z-index: 1;  /* Ensures it's below your content */
 }
-
-body {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
-}
-
-a {
-  color: #92badd;
-  display:inline-block;
-  text-decoration: none;
-  font-weight: 400;
-}
-
-h2 {
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  display:inline-block;
-  margin: 20px 8px 10px 8px; 
-  color: #cccccc;
-  cursor: pointer;
+/*Pour que le nav bar apparaisse au dessus de l'overlay*/
+.aboveOverlay {
+  position: relative;
+  z-index: 2;
 }
 
 
-
-/* STRUCTURE */
-
+/* STRUCTURE pour le register*/
 .wrapper {
   display: flex;
   align-items: center;
@@ -105,7 +75,34 @@ h2.active {
   border-bottom: 2px solid #5fbae9;
 }
 
+.container {
+  position: relative;
+  width: 100vw; /* 100% of the viewport width */
+  height: 40vh; /* 40% of the viewport height */
+  overflow: hidden; /* Ensure no spillover from the container */
+  color: #D50000 ;
+  font-style: italic;
+  background-image: url('./images/Backgr.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  border-radius: 25px;
+}
 
+.container h1 .red {
+  color: #D50000; /* For "Bet" */
+  font-style: italic;
+}
+.container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3); /* This creates a dark overlay. Adjust the 0.3 as needed. */
+  z-index: 0;
+}
 
 /* FORM TYPOGRAPHY*/
 
@@ -119,7 +116,7 @@ input[type=button], .btn-register, input[type=reset]  {
   display: inline-block;
   text-transform: uppercase;
   font-size: 13px;
-  -webkit-box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(243, 246, 248, 0.4);
   box-shadow: 0 10px 30px 0 rgba(95,186,233,0.4);
   -webkit-border-radius: 5px 5px 5px 5px;
   border-radius: 5px 5px 5px 5px;
