--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -1,115 +1,10 @@
-.navbar-dark .navbar-nav .nav-link,
-
-.link-pointer {
-  cursor: pointer;
-}
-
-#carouselExampleIndicators {
-  height: auto;
-}
-
-.buttom-text {
-  color: rgb(4, 0, 0);
-  font-size: 16px;
-  text-align: center;
-  padding: 100px;
-  background-color: #D50000;
-
-}
-
-.button-wrapper {
-  text-align: center;
-}
-
-/* button for home */
-
-
-.nav-item-home {
-  display: inline-block;
-  padding: 15px 25px;
-  background-image: linear-gradient(to right, #509b1b, #00e2da);
-  color: #fff;
-  font-size: 16px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  margin-right: 20px;
-  font-weight: bold;
-
-}
-
-.nav-item-home:active {
-  transform: translateY(2px);
-  box-shadow: none;
-}
-
 body, html {
   background-color: #D50000;
 }
-/* button for bet now */
 
 
-.nav-item-betnow {
-  display: inline-block;
-  padding: 15px 25px;
-  background-image: linear-gradient(to right, #9B1B30, #E20030);
-  color: #fff;
-  font-size: 16px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  margin-right: 20px;
-  font-weight: bold;
-
-}
-
-.nav-item-betnow:active {
-  transform: translateY(2px);
-  box-shadow: none;
-}
-
-/* button for best rate */
-
-
-.nav-item-bestrates {
-  display: inline-block;
-  padding: 15px 25px;
-  background-image: linear-gradient(to right, #9B1B30, #E20030);
-  color: #fff;
-  font-size: 16px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  margin-right: 20px;
-  font-weight: bold;
-
-}
-
-.nav-item-bestrates:active {
-  transform: translateY(2px);
-  box-shadow: none;
-}
-
-
-
-
-
-/* betting slip section */
-
-/* Style for the betting slip section */
-.betting-slip {
-  background-color: #f6e3e3;
-  border: 1px solid #d9b7b7;
-  padding: 20px;
-  margin-top: 20px;
-}
 .connexion {
+  position:relative;
   display: flex; /* Using flexbox for centering */
   flex-direction: column; /* Arranging children (inputs) vertically */
   align-items: center; /* Centering the children horizontally */
@@ -145,6 +40,7 @@ body, html {
   padding: 20px; /* Some padding for aesthetics */
   width: 100%; /* Taking the full width available */
   font-size: 1rem;
+  position:relative;
   box-sizing:content-box; /* Making sure padding and border don't increase the div's total width */
 }
 
@@ -167,7 +63,7 @@ body, html {
 }
 
 .input-group {
-  display: flex;
+  display: relative;
   align-items: center;
 }
 
@@ -207,16 +103,15 @@ label {
 }
 
 .container {
-  position: relative;
-  width: 100vw; /* 100% of the viewport width */
-  height: 40vh; /* 40% of the viewport height */
+  position: relative; /* Positionnement absolu par rapport à container2 */
+  width: 100%; /* 100% of the viewport width */
+  height: 40%; /* 40% of the viewport height */
   overflow: hidden; /* Ensure no spillover from the container */
   color: #D50000 ;
   font-style: italic;
-  background-image: url('./images/Backgr.jpg');
   background-size: cover;
   background-position: center center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   border-radius: 25px;
 }
 .container::before {
@@ -235,8 +130,6 @@ label {
   font-style: italic;
 }
 .topbet-title {
-  position: relative;
-  display: inline-block;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -245,7 +138,7 @@ label {
   z-index: 1;
   color: white;
 }
-
+/* Pour faire apparaître une ligne blanche*/
 .topbet-title::after {
   content: "";
   position: absolute;
@@ -257,7 +150,7 @@ label {
 }
 
 .moto {
-  position: relatieve;
+  position: relative;
   display: inline-block;
   position: absolute;
   top: 74%;
@@ -355,37 +248,10 @@ label {
 
 }
 
-.open-bets-section {
-  padding-top: 20px;
-  margin-bottom: 50px;
 
-}
-
-.account-info-section {
-  padding-top: 20px;
-  margin-bottom: 50px;
-}
-
-.buttom-text {
-  padding-top: 20px;
-}
 
 
 /* logo in css */
-
-
-.logo {
-  background: linear-gradient(to right, #9B1B30, #E20030);
-  padding: 8px 25px;
-  border-radius: 5px;
-  color: #FFFFFF;
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  justify-content: center;
-  font-family: Helvetica;
-}
-
 
 
 /* set styles for all titles (not working without !important) */
