--- a/src/pages/index/styles.css
+++ b/src/pages/index/styles.css
@@ -3,51 +3,85 @@ body, html {
 }
 
 
-.connexion {
-  position:relative;
-  display: flex; /* Using flexbox for centering */
-  flex-direction: column; /* Arranging children (inputs) vertically */
-  align-items: center; /* Centering the children horizontally */
-  justify-content: center; /* Centering the children vertically (if there's extra space) */
-  padding: 20px; /* Some padding for aesthetics */
-  width: 100%; /* Taking the full width available */
-  font-size: 2rem;
-  box-sizing:content-box;
+.container2 {
+  position: absolute; /* Positionnement absolu par rapport à container2 */
+  top: 27%; /* Centre l'image verticalement */
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  width: 80vw; /* 100% of the viewport width */
+  height: 40vh; /* 40% of the viewport height */
+  overflow: hidden; /* Ensure no spillover from the container */
+  color: #D50000 ;
+  font-style: italic;
+  border-radius: 25px;
 }
-.connexion .Log-in {
-  margin: 10px 0; /* Adding some vertical spacing between inputs */
-  padding: 5px 10px; /* Adding some padding inside inputs */
-  color: #FFFFFF; /* Setting the input text color */
-  border: 0px solid #6F6F70; /* Giving a border to make the input visible */
-  border-radius: 10px;
-  background-color: #000000
+.container2 h1 .red {
+  color: #D50000; /* For "Bet" */
+  font-style: italic;
 }
-.connexion .Get-started {
-  padding: 5px 10px; /* Adding some padding inside inputs */
-  color: #000000; /* Setting the input text color */
-  border: 1px solid #000000; /* Giving a border to make the input visible */
-  border-radius: 10px;
-  background-color: #D50000
+.container2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.3); /* This creates a dark overlay. Adjust the 0.3 as needed. */
+  z-index: 0;
 }
-/* Style for the odds comparere */
+.topbet-title {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 8rem; /* Adjust as needed for desired font size */
+  z-index: 1;
+  color: white;
+}
+/* Pour faire apparaître une ligne blanche*/
+.topbet-title::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -5px; /* Adjust this value to change the distance from the text */
+  height: 2px;
+  background-color:white; /* Change to desired color */
+}
+
+.moto {
+  position: relative;
+  display: inline-block;
+  position: absolute;
+  top: 74%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1rem; /* Adjust as needed for desired font size */
+  z-index: 1;
+  color: white;
+}
+
+
+
+/* Style for the odds comparer */
 .odds-comparer {
   background-color: #D50000; /* Setting the background color */
   color: #FFFFFF; /* Setting the text color */
   display: flex; /* Using flexbox for centering */
   flex-direction: column; /* Arranging children (inputs) vertically */
   align-items: center; /* Centering the children horizontally */
-  justify-content: center; /* Centering the children vertically (if there's extra space) */
-  padding: 20px; /* Some padding for aesthetics */
+  justify-content: center; /* Centering the children vertically (if there's extra space) */ /* Some padding for aesthetics */
   width: 100%; /* Taking the full width available */
   font-size: 1rem;
+  margin-top: 50vh;
   position:relative;
   box-sizing:content-box; /* Making sure padding and border don't increase the div's total width */
 }
 
-/* Additional styles for input elements */
 .odds-comparer input[type="text"] {
   margin: 10px 0; /* Adding some vertical spacing between inputs */
   padding: 5px 10px; /* Adding some padding inside inputs */
+  width: 60%;
   background-color: #3A3A3C; /* Setting input background color to match the div */
   color: #6F6F70; /* Setting the input text color */
   border: 1px solid #6F6F70; /* Giving a border to make the input visible */
@@ -63,9 +97,11 @@ body, html {
 }
 
 .input-group {
-  display: relative;
-  align-items: center;
+  display: flex;
+  justify-content: center; /* Horizontalement centrer */
+  align-items: center;     /* Verticalement centrer */
 }
+
 
 .error-message {
   color: white;
@@ -102,156 +138,40 @@ label {
   cursor: pointer;
 }
 
-.container {
-  position: relative; /* Positionnement absolu par rapport à container2 */
-  width: 100%; /* 100% of the viewport width */
-  height: 40%; /* 40% of the viewport height */
-  overflow: hidden; /* Ensure no spillover from the container */
-  color: #D50000 ;
-  font-style: italic;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: repeat;
-  border-radius: 25px;
-}
-.container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3); /* This creates a dark overlay. Adjust the 0.3 as needed. */
-  z-index: 0;
-}
-
-.container h1 .red {
-  color: #D50000; /* For "Bet" */
-  font-style: italic;
-}
-.topbet-title {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 8rem; /* Adjust as needed for desired font size */
-  z-index: 1;
-  color: white;
-}
-/* Pour faire apparaître une ligne blanche*/
-.topbet-title::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: -5px; /* Adjust this value to change the distance from the text */
-  height: 2px;
-  background-color:white; /* Change to desired color */
-}
-
-.moto {
-  position: relative;
-  display: inline-block;
-  position: absolute;
-  top: 74%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1rem; /* Adjust as needed for desired font size */
-  z-index: 1;
-  color: white;
-}
-
 .dropdown-item:hover {
   background-color: #6F6F70;
   color: #3A3A3C;
 }
 
-/* account info section */
 
-/* Style for the account information section */
-.account-info {
-  background-color: #f6e3e3;
-  border: 1px solid #080000;
-  padding: 15px 20px;
-  margin-top: 20px;
+
+.connexion {
+  position:relative;
+  display: flex; /* Using flexbox for centering */
+  flex-direction: column; /* Arranging children (inputs) vertically */
+  align-items: center; /* Centering the children horizontally */
+  justify-content: center; /* Centering the children vertically (if there's extra space) */
+  padding: 20px; /* Some padding for aesthetics */
+  width: 100%; /* Taking the full width available */
+  font-size: 2rem;
+  box-sizing:content-box;
+}
+.connexion .Log-in {
+  margin: 10px 0; /* Adding some vertical spacing between inputs */
+  padding: 5px 10px; /* Adding some padding inside inputs */
+  color: #FFFFFF; /* Setting the input text color */
+  border: 0px solid #6F6F70; /* Giving a border to make the input visible */
+  border-radius: 10px;
+  background-color: #000000
+}
+.connexion .Get-started {
+  padding: 5px 10px; /* Adding some padding inside inputs */
+  color: #000000; /* Setting the input text color */
+  border: 1px solid #000000; /* Giving a border to make the input visible */
+  border-radius: 10px;
+  background-color: #D50000
 }
 
-.account-info p {
-  color: #555;
-  font-size: 16px;
-  margin: 0;
-  padding: 5px 0;
-}
-
-/* Style for the username */
-.account-info p.username {
-  font-weight: bold;
-}
-
-/* Style for the balance */
-.account-info p.balance {
-  color: #0d6efd;
-  font-weight: bold;
-}
-
-
-/* Style for the leaderboard part */
-.leaderboard-entries {
-  background-image: url('images/background_topbet.png');
-  background-color: rgba(255, 255, 255, 0.5);
-  background-position: center center;
-  padding: 200px 20px;
-  border-radius: 20px;
-  margin: 40px auto;
-  max-width: 10000px;
-  color: white;
-  ;
-  background-size: auto;
-
-}
-
-.leaderboard-entries table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.leaderboard-entries th,
-.leaderboard-entries td {
-  text-align: center;
-  padding: 10px;
-  border: 1px solid #ddd;
-}
-
-.leaderboard-entries th {
-  font-weight: bold;
-}
-
-
-
-
-/* adding space between sections */
-
-
-.headertext {
-  margin-bottom: 50px;
-}
-
-.upcoming-events-section {
-  padding-top: 20px;
-  margin-bottom: 50px;
-
-}
-
-.leaderboard-section {
-  padding-top: 20px;
-  margin-bottom: 50px;
-
-}
-
-
-
-
-/* logo in css */
 
 
 /* set styles for all titles (not working without !important) */
