deleted:    public/images/styles.css 	modified:   src/pages/account_infos/styles.css 	modified:   src/pages/customize/Customize.js 	modified:   src/pages/error_404/style.css 	new file:   src/pages/index/images/Football.png 	deleted:    src/pages/index/images/background_topbet.png 	modified:   src/pages/login/Login.js 	modified:   src/pages/registration/Registration.js 	new file:   src/pages/registration/images/Football.png

--- a/src/pages/error_404/style.css
+++ b/src/pages/error_404/style.css
@@ -1,7 +1,10 @@
 * {
     font-family: 'PT Sans Caption', sans-serif, 'arial', 'Times New Roman';
 }
-
+body, html {
+    background-color: #D50000;
+  }
+  
 /* Error Page */
 .error .clip .shadow {
     height: 180px;
